2008-12-18  Matevz Tadel  <matevz.tadel@ijs.si>

	* images/lin_coldsteel.png:
	* images/lin_r2y.png:
	New gradients for tracks.

	* AliLoader.C:
	* alice_simple.C:
	* zaliload_metagui.C:
	Modify for running without AliRoot / RAW visualization.

	* def_geoview.root:
	New version - ZColor streamer has been changed.

2007-03-30  Matevz Tadel  <matevz.tadel@ijs.si>

	* loadlibs.C:
	New version of loadlibs from alice.

2005-10-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* AliAnimator.C:
	Added camera movement along a spiral and a convenience function
	prepare_for_capture().

	* common_foos.C:
	g_nest was not initialized (create instead of assign was called);
	Lamp::Scale was renamed to Lamp::LampScale.
	
2005-10-18  Alja Mrak-Tadel  <alja.mrak@ijs.si>

	* AliAnimator.C:
        Change time scale to ns. Add configuration for MCTrackRS and
        classes in Animator list.

2005-10-12  Matevz Tadel  <matevz.tadel@ijs.si>

	* AliLoader.C:
	* zaliload_metagui.C:
	Moved make_zaliload_metagui() from AliLoader.C to new file
	zaliload_metagui.C.

	* AliAnimator.C:
	New file: set-up for event movie capture.

2005-07-13  Matevz Tadel  <matevz.tadel@ijs.si>

	* AliLoader.C:
	Disabled picking of geometry by default.

	* common_foos.C:
	Use demo_scene_elements.C macro from GledCore for creation of
	orthographic camera bases. In fact the code was moved there and
	extended to allow selection of a custom up-axis.

2005-07-08  Alja Mrak-Tadel  <alja.mrak@ijs.si>

	* AliLoader.C:
	* common_foos.C:

2005-07-08  Alja Mrak-Tadel  <alja.mrak@ijs.si>

	* AliLoader.C:
        Add Kink selection in metagui.

	* common_foos.C:
        Add g_pupil to test GL user interface.

2005-07-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* AliLoader.C:
	Reintroduced invocation of LoadVSD() on start-up when directory
	name is given as an argument.
	
2005-06-29  Matevz Tadel  <matevz.tadel@ijs.si>

	* AliLoader.C:
	* alice_geom.C:
	* alice_simple.C:
	* check_overlaps.C:
	* common_foos.C: